tests/negative/test_ind_data_owning_non_ref.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

data Bar {
    f0:Foo
    f1:Foo
};

fnc bar () Bar {
    sym f:Bar;
    ret (>> f);
};

fnc main () () {
    [] (bar) f0;
};